--- a/www/index.html
+++ b/www/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <!-- Set up project for "all" languages/alphabets -->
   <meta charset="utf-8">
+      <!-- Set up project for Mobile Friendly -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+    <!-- App security. TO-DO: Set it properly for final build! -->
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
+      <!-- The magic that converts our Web Code to Native Code  -->
   <script src="cordova.js"></script>
+    <!-- one of the required template libraries -->
   <script src="components/loader.js"></script>
-  <script src="lib/onsenui/js/onsenui.min.js"></script>
-
+  <!-- Another of the required template libraries -->
   <link rel="stylesheet" href="components/loader.css">
+
+  <!-- Onsen Library -->
+  <script src="lib/onsenui/js/onsenui.min.js"></script>
   <link rel="stylesheet" href="lib/onsenui/css/onsenui.css">
   <link rel="stylesheet" href="lib/onsenui/css/onsen-css-components.css">
+
+  <!-- Our custom CSS code here -->
   <link rel="stylesheet" href="css/style.css">
 
-  <script>
-    ons.ready(function() {
-      console.log("Onsen UI is ready!");
-    });
 
-    if (ons.platform.isIPhoneX()) {
-      document.documentElement.setAttribute('onsflag-iphonex-portrait', '');
-      document.documentElement.setAttribute('onsflag-iphonex-landscape', '');
-    }
-  </script>
 </head>
 <body>
   <br />
   This is a template for Onsen UI app.
+
+  <script rel="js/scripts.js"></script>
 </body>
 </html>
